[tool.black]
line-length = 120
skip-string-normalization = true
target-version = ['py39']
include = "(src/vorta/|tests).*.py$"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.ruff]
select = ["T", "I"]
fixable = ["I"]
line-length = 120
exclude = ["package", "build", "dist", ".git", ".idea", ".cache", ".tox", ".eggs", "./src/vorta/__init__.py", ".direnv", "env"]
